--- a/src/en.lproj/MainWindow.xib
+++ b/src/en.lproj/MainWindow.xib
@@ -8,6 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<integer value="28"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -36,14 +37,14 @@
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 			</object>
 			<object class="IBUIToolbar" id="10342245">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">266</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<object class="IBUIView" id="398656380">
 						<reference key="NSNextResponder" ref="10342245"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{60, 0}, {180, 44}}</string>
+						<string key="NSFrame">{{55, 0}, {180, 44}}</string>
 						<reference key="NSSuperview" ref="10342245"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -53,6 +54,7 @@
 					</object>
 				</object>
 				<string key="NSFrameSize">{320, 44}</string>
+				<reference key="NSSuperview"/>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 				<object class="NSMutableArray" key="IBUIItems">
@@ -74,7 +76,7 @@
 						<reference key="IBUIToolbar" ref="10342245"/>
 					</object>
 					<object class="IBUIBarButtonItem" id="212117916">
-						<string key="IBUITitle">Item</string>
+						<string key="IBUITitle">About</string>
 						<int key="IBUIStyle">1</int>
 						<reference key="IBUIToolbar" ref="10342245"/>
 					</object>
@@ -104,8 +106,13 @@
 			<object class="IBUICustomObject" id="207792850"/>
 			<object class="IBUICustomObject" id="1008333446"/>
 			<object class="IBUICustomObject" id="711100591"/>
-			<object class="IBUICustomObject" id="302798476"/>
-			<object class="IBUICustomObject" id="261731241"/>
+			<object class="IBUICustomObject" id="705573642"/>
+			<object class="IBUICustomObject" id="969733259"/>
+			<object class="IBUICustomObject" id="705186636"/>
+			<object class="IBUIViewController" id="619364013">
+				<string key="IBUINibName">AboutView</string>
+				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
+			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<object class="NSMutableArray" key="connectionRecords">
@@ -282,14 +289,14 @@
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">refreshAllServerData:</string>
 						<reference key="source" ref="647746191"/>
-						<reference key="destination" ref="302798476"/>
+						<reference key="destination" ref="705573642"/>
 					</object>
 					<int key="connectionID">73</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">refresher</string>
-						<reference key="source" ref="302798476"/>
+						<reference key="source" ref="705573642"/>
 						<reference key="destination" ref="1061950094"/>
 					</object>
 					<int key="connectionID">74</int>
@@ -298,9 +305,33 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">persistentStore</string>
 						<reference key="source" ref="1061950094"/>
-						<reference key="destination" ref="261731241"/>
+						<reference key="destination" ref="969733259"/>
 					</object>
 					<int key="connectionID">78</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">displayAboutView:</string>
+						<reference key="source" ref="212117916"/>
+						<reference key="destination" ref="705186636"/>
+					</object>
+					<int key="connectionID">81</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">aboutViewController</string>
+						<reference key="source" ref="705186636"/>
+						<reference key="destination" ref="619364013"/>
+					</object>
+					<int key="connectionID">82</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">navController</string>
+						<reference key="source" ref="705186636"/>
+						<reference key="destination" ref="701001926"/>
+					</object>
+					<int key="connectionID">83</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -439,12 +470,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">72</int>
-						<reference key="object" ref="302798476"/>
+						<reference key="object" ref="705573642"/>
 						<reference key="parent" ref="957960031"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">77</int>
-						<reference key="object" ref="261731241"/>
+						<reference key="object" ref="969733259"/>
+						<reference key="parent" ref="957960031"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">79</int>
+						<reference key="object" ref="705186636"/>
+						<reference key="parent" ref="957960031"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">80</int>
+						<reference key="object" ref="619364013"/>
 						<reference key="parent" ref="957960031"/>
 					</object>
 				</object>
@@ -486,6 +527,10 @@
 					<string>72.IBPluginDependency</string>
 					<string>77.CustomClassName</string>
 					<string>77.IBPluginDependency</string>
+					<string>79.CustomClassName</string>
+					<string>79.IBPluginDependency</string>
+					<string>80.IBEditorWindowLastContentRect</string>
+					<string>80.IBPluginDependency</string>
 					<string>9.IBEditorWindowLastContentRect</string>
 					<string>9.IBPluginDependency</string>
 				</object>
@@ -505,7 +550,7 @@
 					</object>
 					<string>{{357, 490}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>{{21, 1067}, {320, 44}}</string>
+					<string>{{370, 188}, {320, 44}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -532,6 +577,10 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>PListBuildWatchPersistentStore</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>AboutDisplayer</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>{{0, 665}, {320, 480}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>{{384, 369}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
@@ -556,11 +605,36 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">78</int>
+			<int key="maxID">83</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">AboutDisplayer</string>
+					<string key="superclassName">NSObject</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">displayAboutView:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSMutableArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>aboutViewController</string>
+							<string>navController</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UIViewController</string>
+							<string>UINavigationController</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/AboutDisplayer.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">BuildWatchAppController</string>
 					<string key="superclassName">NSObject</string>
